Implement player position syncing

--- a/default_launch.json
+++ b/default_launch.json
@@ -16,6 +16,12 @@
         "permissions": [{
           "all": {}
         }]
+      },
+      {
+        "worker_type": "HorizonClientWorker",
+        "permissions": [{
+          "all": {}
+        }]
       }
     ]
   }
