--- a/workers/java/worker/build.gradle
+++ b/workers/java/worker/build.gradle
@@ -12,9 +12,9 @@ buildscript {
 apply plugin: 'net.minecraftforge.gradle.forge'
 apply plugin: 'org.spongepowered.mixin'
 
-version = "1.0"
-group = "com.yourname.modid"
-archivesBaseName = "modid"
+version = "0.0.1"
+group = "com.hrznstudio.spatial"
+archivesBaseName = "Spatial"
 
 sourceCompatibility = targetCompatibility = '1.8'
 compileJava {
