--- a/default_launch.json
+++ b/default_launch.json
@@ -16,6 +16,11 @@
         "permissions": [{
           "all": {}
         }]
+      },{
+        "worker_type": "ChunkWorker",
+        "permissions": [{
+          "all": {}
+        }]
       },
       {
         "worker_type": "HorizonClientWorker",
