--- a/default_launch.json
+++ b/default_launch.json
@@ -1,5 +1,5 @@
 {
-    "template": "small_bridge_v2",
+    "template": "small_entity_db_v2",
     "world": {
       "chunkEdgeLengthMeters": 50,
       "snapshots": {
