Read chunk data from client (almost)
I still have to figure out how to get the client to receive entities
(the View remains empty, and web panel shows no readable entities)

#14 Chunk Syncing

--- a/workers/java/settings.gradle
+++ b/workers/java/settings.gradle
@@ -2,4 +2,4 @@ include 'worker'
 include 'worker-sdk'
 
 rootProject.name = "HorizonJavaWorker"
-gradle.ext.mainClass = 'com.hrznstudio.spatial.Bootstrap'
+gradle.ext.mainClass = 'com.hrznstudio.spatial.SpatialLaunchWrapper'
