--- a/workers/java/worker/src/main/resources/META-INF/spatial_at.cfg
+++ b/workers/java/worker/src/main/resources/META-INF/spatial_at.cfg
@@ -1,3 +1,6 @@
 protected net.minecraft.network.NetworkManager field_150746_k #channel
+
 public net.minecraft.client.multiplayer.WorldClient field_73033_b #clientChunkProvider
-public net.minecraft.client.multiplayer.ChunkProviderClient field_73235_d #world
+public net.minecraft.client.multiplayer.ChunkProviderClient * #lets just do fuckin everything
+
+public net.minecraft.world.chunk.Chunk func_76590_a()V #generateHeightMap
