--- a/default_launch.json
+++ b/default_launch.json
@@ -1,52 +1,27 @@
 {
-  "template": "small_entity_db_v2",
-  "world": {
-    "chunkEdgeLengthMeters": 50,
-    "snapshots": {
-      "snapshotWritePeriodSeconds": 0
+    "template": "small",
+    "world": {
+      "chunkEdgeLengthMeters": 16,
+      "snapshots": {
+        "snapshotWritePeriodSeconds": 0
+      },
+      "dimensions": {
+        "xMeters": 1500,
+        "zMeters": 1500
+      }
     },
-    "dimensions": {
-      "xMeters": 1500,
-      "zMeters": 1500
-    }
-  },
-  "load_balancing": {
-    "layer_configurations": [
+    "workers": [
       {
-        "layer": "chunk_worker",
-        "hex_grid": {
-          "num_workers": 1
-        },
-        "options": {
-          "manual_worker_connection_only": true
-        }
+        "worker_type": "HorizonJavaWorker",
+        "permissions": [{
+          "all": {}
+        }]
+      },
+      {
+        "worker_type": "HorizonClientWorker",
+        "permissions": [{
+          "all": {}
+        }]
       }
     ]
-  },
-  "workers": [
-    {
-      "worker_type": "HorizonJavaWorker",
-      "permissions": [
-        {
-          "all": {}
-        }
-      ]
-    },
-    {
-      "worker_type": "ChunkWorker",
-      "permissions": [
-        {
-          "all": {}
-        }
-      ]
-    },
-    {
-      "worker_type": "HorizonClientWorker",
-      "permissions": [
-        {
-          "all": {}
-        }
-      ]
-    }
-  ]
-}
+  }
