[WIP] World loading and syncing to clients (#14 #15) (#19)
* Add external launch config for ChunkWorker

#14 Chunk Syncing

* Revamp chunk schema

#14 Chunk Syncing

* Use updated reservation api

* Fix gradle fatjar and ChunkWorker executable path

#14 Chunk Syncing

* Abstract away the connection manager

* Add worker manager

* Fix mistake in worker manager

* Move service definition

* Run the WorkerManager trough LaunchWrapper

This means you should use SpatialLaunchWrapper instead of calling
WorkerManager directly.

* Connect the Chunk Worker

#14 Chunk Syncing

* Add a connection callback to the ConnectionManager

* Add support for View Mode in ConnectionManager

* Update entity db

* Add dummy chunk generation ability to the chunk worker

* Let the client (dis)connect to/from the server

#15 World Loading

* Fix ConnectionManager to act as keep-alive again

* Fix chunk creation after database upgrade

* Let consumers give their own Dispatcher implementation

* Read chunk data from client (almost)

I still have to figure out how to get the client to receive entities
(the View remains empty, and web panel shows no readable entities)

#14 Chunk Syncing

* add worker-sdk build.gradle

(cherry picked from commit a2c1dee17ca6566c408f13317b94f4e3eeb42217)

* Package mc & forge in the workers builds

* Fix manifests

* Fix worker types and implement base worker + doc

* Let chunk workers & clients get entities data

Fix a few stupid mistakes as well

* Render the world

I'm so sorry for anyone who reads this

* Update branding

* Wah?

* Disable brand mixin

* Implement world converter

* Update entity schema

* Update chunk provider y level

* Fix some issues with chunk loading

* Update player id on client worker

* Add default snapshot to test with

* Fix chunk loading for real and update snapshot

* Update spatial launch config

* Update spatial launch config (fix der

--- a/workers/java/build.gradle
+++ b/workers/java/build.gradle
@@ -1,29 +1,21 @@
 apply plugin: 'java'
-repositories {
-    maven { url 'http://repo.maven.apache.org/maven2' }
-    maven {
-        url 'https://repo.spongepowered.org/maven/'
-    }
-}
 
 dependencies {
-    compile project(':worker')
-    compile project(':worker-sdk')
+    compile (project(':worker')) {
+        transitive false
+    }
 }
-
-def mainClass = gradle.ext.mainClass
 
 jar {
     baseName = rootProject.name
-    // Below instructs the jar plugin to build a jar from all the sources, recursively including the directories
-    // (via zipTree). This yields a self-contained jar with all dependencies included within.
-    from {
-        configurations.compile.collect {
-            it.isDirectory() ? it : zipTree(it)
-        }
-    }
+    from (configurations.compile.collect { it.isDirectory() ? it : zipTree(it) })
     manifest {
-        attributes 'Main-Class': mainClass
+        attributes([
+                'FMLAT'         : 'spatial_at.cfg',
+                'Main-Class': gradle.ext.mainClass,
+                'Maven-Artifact': "${project.group}:${project.archivesBaseName}:${project.version}",
+                'Timestamp'     : System.currentTimeMillis()
+        ])
     }
 }
 
