--- a/workers/java/settings.gradle
+++ b/workers/java/settings.gradle
@@ -1,5 +1,6 @@
 include 'worker'
 include 'worker-sdk'
+include 'worker:patcherdummy'
 
 rootProject.name = "HorizonJavaWorker"
-gradle.ext.mainClass = 'com.hrznstudio.spatial.Bootstrap'
+gradle.ext.mainClass = 'com.hrznstudio.spatial.SpatialLaunchWrapper'
