--- a/workers/java/worker/src/main/resources/META-INF/spatial_at.cfg
+++ b/workers/java/worker/src/main/resources/META-INF/spatial_at.cfg
@@ -1,7 +1,9 @@
 protected net.minecraft.network.NetworkManager field_150746_k #channel
 
 public net.minecraft.client.multiplayer.WorldClient field_73033_b #clientChunkProvider
+public net.minecraft.client.gui.GuiMainMenu * #lets just do fuckin everything
 public net.minecraft.client.multiplayer.ChunkProviderClient * #lets just do fuckin everything
 public net.minecraft.client.network.NetHandlerPlayClient * #lets just do fuckin everything
+public net.minecraft.client.gui.GuiMainMenu func_73971_c(IIF)V #renderSkybox
 
 public net.minecraft.world.chunk.Chunk func_76590_a()V #generateHeightMap
